# KeyboardLocker

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  KeyboardLocker.code-workspace  Makefile  README.md  build-ahk.cmd  build.cmd  install.cmd  vcpkg.json
TouchPortal-plugin/: Makefile  package.json
TouchPortal-plugin/src/: index.js  plugin.json
lib/: KeyboardLocker.ahk  KeyboardLocker.c
res/: KeyboardLocker.rc
src/: KeyboardLocker.ahk  KeyboardLocker.c  KeyboardLocker.cpp  KeyboardLocker_runner.c  keyboard.c  keyboard_runner.c
